# DnsChecker

./: Cargo.toml
app/: Cargo.toml
app/src/: main.rs
core/: Cargo.toml
core/src/: addr.rs  dns.rs  lib.rs  ping.rs  quality.rs  score.rs  socks5.rs
